stl-test/Tests/array_view/array_view/Negative/test11.cpp
//#error
#include <array_view>
int main()
{
    std::array_view<char, 2> a
    std::array_view<int, 2> b;
    b = a;
}
